# blit-racers

./: .gitignore  CMakeLists.txt  README.md  actor.cpp  actor.hpp  animation-frame.cpp  animation-frame.hpp  animation.cpp  animation.hpp  assets.cpp  assets.hpp  assets.yml  assets_report.txt  blit-racers.cpp  blit-racers.filters  blit-racers.hpp  blit-racers.sln  blit-racers.vcxproj  calculations.cpp  calculations.hpp  game.cpp  game.hpp  metadata.yml  pathnode.cpp  pathnode.hpp  position.hpp  tiledata.cpp  tiledata.hpp  track.cpp  track.hpp  util.cpp  util.hpp
.github/workflows/: build.yml
assets/: car1.aseprite  soap.aseprite  title.aseprite
assets/maps/: kitchen-blank.tmx  map1.tmx  map2.tmx  tile-sheet2.tsx
tools/: build.sh
